Updated Building Functions
Updated the buying and selling building functions to be generic.

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           </div>
           
           <div class="building--button--container" style="border: 8px solid black;">
-            <button onclick="buyBrettFactory()">Buy</button>
-            <button onclick="sellBrettFactory()">Sell</button>
+            <button onclick="buyBuilding(brettFactory, factoryID)">Buy</button>
+            <button onclick="sellBuilding(brettFactory, factoryID)">Sell</button>
 
           </div>
            
