--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h3 style="text-align: center;">Upgrades</h3>
 
         <div class="upgrade--container">
-          <img src="images/cookie.jpg" class="upgrade--image" style="border: 4px solid black;"></img>
+          <img id="upgrade1" src="images/cookie.jpg" class="upgrade--image" style="border: 4px solid black;" onclick="upgradeClick()"></img>
         </div>
 
         <h3 style="text-align: center;">Buildings</h3>
