Make the brett cookie interactive
* Cookie bobbing functionality on click

* Interactive Cookie on Hover

* Enhanced the cookie hover

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="cookie">
         
         <span id="counter">0</span>
-        <img class="circular--square" src="images/brett.jpg" width="200" height="200" onclick="cookieUp(clickMultiplier);" style="margin: auto;"></img>
+        <img id ="cookie" class="circular--square" src="images/brett.jpg" width="200" height="200" onmouseenter = "cookieBig()" onclick="cookieUp(clickMultiplier);" style="margin: auto"></img>
       </div>
 
       
