--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <script src="scripts/cookieUp.js"></script>
     <script src="scripts/Buildings.js"></script>
+    <script src="scripts/numberFormater.js"></script>
 
     <div class="container">
 
