Added placeholder upgrade buttons

--- a/index.html
+++ b/index.html
@@ -40,9 +40,31 @@
       <div class="top--right">
         <h3 style="text-align: center;">Upgrades</h3>
 
-        <div class="upgrade--container">
-          <img id="upgrade1" src="images/cookie.jpg" class="upgrade--image" style="border: 4px solid black;" onclick="upgradeClick()"></img>
+        <div class ="upgrade--container">
+
+          <div class="upgrade" id="upgrade1">
+            <img id="upgrade1" src="images/cookie.jpg" class="upgrade--image" style="border: 4px solid black;" onclick="upgradeClick()"></img>
+          </div>
+
+          <div class="upgrade" id="upgrade1">
+            <img id="upgrade1" src="images/cookie.jpg" class="upgrade--image" style="border: 4px solid black;" onclick="upgradeClick()"></img>
+          </div>
+
+          <div class="upgrade" id="upgrade1">
+            <img id="upgrade1" src="images/cookie.jpg" class="upgrade--image" style="border: 4px solid black;" onclick="upgradeClick()"></img>
+          </div>
+
+          <div class="upgrade" id="upgrade1">
+            <img id="upgrade1" src="images/cookie.jpg" class="upgrade--image" style="border: 4px solid black;" onclick="upgradeClick()"></img>
+          </div>
+
+          <div class="upgrade" id="upgrade1">
+            <img id="upgrade1" src="images/cookie.jpg" class="upgrade--image" style="border: 4px solid black;" onclick="upgradeClick()"></img>
+          </div>
+
         </div>
+
+        
 
         <h3 style="text-align: center;">Buildings</h3>
         
