--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="scripts/cookieUp.js"></script>
     <script src="scripts/Buildings.js"></script>
     <script src="scripts/numberFormater.js"></script>
+    <script src="scripts/upgradeTooltip.js"></script>
 
     <div class="container">
 
@@ -42,9 +43,20 @@
 
         <div class ="upgrade--container">
 
-          <div class="upgrade" id="upgrade1">
-            <img id="upgrade1" src="images/cookie.jpg" class="upgrade--image" style="border: 4px solid black;" onclick="upgradeClick()"></img>
+
+
+
+          <div class="upgrade">
+            <img src="images/cookie.jpg" id="upgrade1" class="upgrade--image" style="border: 4px solid black;" onclick="upgradeClick()"></img>
+            <span class="upgrade--tooltip">  Tooltip</span>
           </div>
+
+
+
+
+
+
+
 
           <div class="upgrade" id="upgrade1">
             <img id="upgrade1" src="images/cookie.jpg" class="upgrade--image" style="border: 4px solid black;" onclick="upgradeClick()"></img>
@@ -262,5 +274,7 @@
     
 
   </div>
+
+  <script src="scripts/upgradeTooltip.js"></script>
   </body>
 </html>
