--- a/index.html
+++ b/index.html
@@ -48,7 +48,21 @@
 
           <div class="upgrade">
             <img src="images/cookie.jpg" id="upgrade1" class="upgrade--image" style="border: 4px solid black;" onclick="upgradeClick()"></img>
-            <span class="upgrade--tooltip">  Tooltip</span>
+            <span class="upgrade--tooltip">
+              <div>
+
+                <h3>Upgrade Click</h3>
+                <h3>Cost: 100</h3>
+              </div>
+
+              <div>
+
+                <p style="margin:0px;" >This is the Description of the Upgrade</p>
+              </div>
+
+
+
+            </span>
           </div>
 
 
