Added BrettFactory Upgrade

--- a/index.html
+++ b/index.html
@@ -57,7 +57,26 @@
 
               <div>
 
-                <p style="margin:0px;" >This is the Description of the Upgrade</p>
+                <p style="margin:0px;" >Doubles the value of your Clicking Power</p>
+              </div>
+
+
+
+            </span>
+          </div>
+
+          <div class="upgrade">
+            <img src="images/cookie.jpg" id="upgrade2" class="upgrade--image" style="border: 4px solid black;" onclick="upgradeBrettFactory()"></img>
+            <span class="upgrade--tooltip">
+              <div>
+
+                <h3>Upgrade BrettFactory</h3>
+                <h3>Cost: 500</h3>
+              </div>
+
+              <div>
+
+                <p style="margin:0px;" >Differnt Tooltip</p>
               </div>
 
 
