Moved stat styling to dedicated style sheet

--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
 
         <h3>Statistics</h3>
 
-        <div style="display:flex; flex-direction: row; border: 5px solid black">
+        <div class="stat--container">
           <h3>Total Bretts Created: </h3> 
           <h3 id="allTimeCookies" style="padding-left: 5%;">0</h3>
-
         </div>
         
     </div>
