--- a/index.html
+++ b/index.html
@@ -45,6 +45,21 @@
           <h3>Total Bretts Created: </h3> 
           <h3 id="allTimeCookies" style="padding-left: 5%;">0</h3>
         </div>
+
+        <div class="stat--container">
+          <h3>Total Bretts Per Second: </h3> 
+          <h3 id="brettsPerSecond" style="padding-left: 5%;">0</h3>
+        </div>
+
+        <div class="stat--container">
+          <h3>Total Clicks: </h3> 
+          <h3 id="clicks" style="padding-left: 5%;">0</h3>
+        </div>
+
+        <div class="stat--container">
+          <h3>BuildingsBought: </h3> 
+          <h3 id="buildingsBought" style="padding-left: 5%;">0</h3>
+        </div>
         
     </div>
 
