Added Progress bar shell (no functionality)

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
 
-
+      <div class = "Stats">
 
         <h3>Statistics</h3>
 
@@ -61,7 +61,23 @@
           <h3>BuildingsBought: </h3> 
           <h3 id="buildingsBought" style="padding-left: 5%;">0</h3>
         </div>
-        
+
+      </div>
+      
+      <div class="progress--bar--container">
+        <h3>Progress Until Complete</h3>
+      <div class="progress--bar--outline">
+
+        <div class="progress--bar">
+
+        </div>
+
+
+      </div>
+
+      </div>
+
+
     </div>
 
     <div class="right">
