Working Progress Bar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="scripts/cookieUp.js"></script>
     <script src="scripts/numberFormater.js"></script>
     <script src="scripts/upgradeTooltip.js"></script>
+    
 
     <div class="container">
 
@@ -68,7 +69,7 @@
         <h3>Progress Until Complete</h3>
       <div class="progress--bar--outline">
 
-        <div class="progress--bar">
+        <div class="progress--bar" id="progress">
 
         </div>
 
@@ -419,5 +420,7 @@
   </div>
 
   <script src="scripts/upgradeTooltip.js"></script>
+  <script src="scripts/progressBar.js"></script>
+  
   </body>
 </html>
