Reformat the center page

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
 
 
       <div class = "Stats">
-
-        <h3>Statistics</h3>
+        <div style="text-align: center;">
+          <h2>Statistics</h2>
+        </div>
+        
 
         <div class="stat--container">
           <h3>Total Bretts Created: </h3> 
@@ -77,8 +79,6 @@
       </div>
 
       </div>
-
-
     </div>
 
     <div class="right">
@@ -421,6 +421,6 @@
 
   <script src="scripts/upgradeTooltip.js"></script>
   <script src="scripts/progressBar.js"></script>
-  
+
   </body>
 </html>
