first working tooltip for buildings

--- a/index.html
+++ b/index.html
@@ -235,6 +235,10 @@
 
         <div class="building" id="building1">
 
+          <span class="building--tooltip">
+            Tooltip?
+          </span>
+
           <div class="building--information--container">
             <img src="images/cookie.jpg" class="building--image"></img>
             <h3 style="padding-right: 23px;">Brett Factory</h3>
